--- a/colors.html
+++ b/colors.html
@@ -18,9 +18,9 @@
             <div id="new-colors">New Colors</div>
             <div id="notification"></div>
             <div class="difficulty">
-                <div id="easy">Easy</div>
-                <div id="normal" class="active">Normal</div>
-                <div id="hard">Hard</div>
+                <div id="easy" value="3">Easy</div>
+                <div id="normal" value="6" class="active">Normal</div>
+                <div id="hard" value="9">Hard</div>
             </div>
         </div>
     </header>
