--- a/colors.html
+++ b/colors.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="colors.css">
-    <title>Colors</title>
+    <title>Color Game</title>
 </head>
 
 <body>
     <header>
         <div class="title">
-            <h1>The Great <span id="currentColor"></span> Guessing Game</h1>
+            <h1>The Great<span id="currentColor"></span>Guessing Game</h1>
         </div>
         <div class="nav-bar noselect">
-            <div id="new-colors">New Colors</div>
+            <div id="new-colors"><span>New Colors</span></div>
             <div id="notification"></div>
             <div class="difficulty">
-                <div id="easy" value="3">Easy</div>
-                <div id="normal" value="6" class="active">Normal</div>
-                <div id="hard" value="9">Hard</div>
+                <div><span id="easy" value="3">Easy</span></div>
+                <div><span id="normal" value="6" class="active">Normal</span></div>
+                <div><span id="hard" value="9">Hard</span></div>
             </div>
         </div>
     </header>
